--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -60,3 +60,6 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 #properties
 admin.ipaddress=0:0:0:0:0:0:0:2
+
+#session timeout
+##server.servlet.session.timeout=15m
