--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -74,7 +74,10 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 #properties
 admin.ipaddress=0:0:0:0:0:0:0:2
 
-
+#log
+logging.level.root=DEBUG
+logging.level.org.apache.ibatis=DEBUG
+logging.level.org.springframework.security=DEBUG
 
 
 #session timeout
