회원가입 인증 기능 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,8 +15,8 @@ spring.mvc.view.suffix=.jsp
 #jdbc
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
-spring.datasource.username=fin02
-spring.datasource.password=fin02
+spring.datasource.username=test
+spring.datasource.password=test
 
 #mybatis
 mybatis.type-aliases-package=com.example.neoheulge.dto
@@ -27,6 +27,8 @@ mybatis.configuration.map-underscore-to-camel-case=false
 
 # Redis
 spring.data.redis.host=localhost
+spring.data.redis.port=6379
+spring.data.redis.password=strongPassword
 
 #JPA
 spring.jpa.generate-ddl=false
@@ -34,7 +36,7 @@ spring.jpa.show-sql=true
 spring.jpa.database=oracle
 spring.jpa.properties.hibernate-platform=org.hibernate.dialect.OracleDialect
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.defer-datasource-initialization=true
 
 # Toss API
@@ -42,15 +44,12 @@ toss.api.cliKey=test_ck_6bJXmgo28e1pJj0EzE1A8LAnGKWx
 toss.api.secretKey=test_sk_GjLJoQ1aVZYpoQyo4RNJ3w6KYe2R
 toss.success.url="http://localhost:8080/api/v1/payments/toss/success"
 toss.fail.url="http://localhost:8080/api/v1/payments/toss/fail"
-# Redis
-spring.data.redis.port=6379
-
 # Redis cache
 spring.cache.type=redis
 
 #coolsms
-coolsms.api.key=NCS982DU82GVBDOY
-coolsms.api.secret=0AAE3LFK0M54XLIVG4BWFGSOU5FO6LBK
+coolsms.api.key=NCS5XT8ATJHRNTZG
+coolsms.api.secret=SFZFPCWUWE9RDVX4IQRXBAGIGKWJABYH
 
 
 #mail
