--- a/pom.xml
+++ b/pom.xml
@@ -162,7 +162,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
-
+		<dependency>
+			<groupId>org.springframework.session</groupId>
+			<artifactId>spring-session-data-redis</artifactId>
+			<version>2.3.0.RELEASE</version>
+		</dependency>
         <!-- Spring Cache Starter -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
